fix(ci): commit backend governance shell scripts and unignore in gitignore
- Stop ignoring backend/scripts/*.sh so CI can execute governance checks

- Add validate-no-versioned-files.sh and security-drift-detector.sh to repo

--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,9 @@ scripts/*
 !scripts/phase1-smoke.mjs
 !scripts/verify-e2e.mjs
 
+# Backend CI governance scripts (must be committed)
+!backend/scripts/*.sh
+
 # Test files
 tests/
 test-results/
