fix(ci): track backend tsconfig files for zero-error typecheck
- Unignore backend/tsconfig*.json (was ignored by global tsconfig*.json)

- Commit backend/tsconfig.json and backend/tsconfig.build.json so backend-ci can run tsc --project tsconfig.build.json

--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,7 @@ coverage/
 !client/src/config/*.config.ts
 tsconfig*.json
 !tsconfig.server.json
+!backend/tsconfig*.json
 jest.config.*
 !backend/jest.config.*
 .eslintrc.*
