--- a/backend/package.json
+++ b/backend/package.json
@@ -60,12 +60,15 @@
   "dependencies": {
     "@prisma/client": "5.22.0",
     "@types/glob": "^8.1.0",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "bufferutil": "^4.1.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "drizzle-orm": "^0.36.4",
     "dotenv": "^16.6.1",
+    "envalid": "^8.0.0",
     "express": "^5.2.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.1",
@@ -82,10 +85,13 @@
     "nodemailer": "^7.0.11",
     "openai": "^6.15.0",
     "pg": "^8.16.3",
+    "postgres": "^3.4.5",
     "prom-client": "^15.1.3",
     "puppeteer": "^23.11.1",
     "rate-limit-redis": "^4.3.1",
+    "stripe": "^14.25.0",
     "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
     "winston": "^3.19.0",
     "zod": "^4.3.6"
   },
@@ -101,6 +107,7 @@
     "@faker-js/faker": "^10.1.0",
     "@mermaid-js/mermaid-cli": "^11.12.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
