--- a/backend/package.json
+++ b/backend/package.json
@@ -116,6 +116,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^20.19.24",
     "@types/nodemailer": "^7.0.3",
+    "@types/uuid": "^9.0.8",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "@typescript-eslint/parser": "^8.56.0",
